@@ -143,6 +143,7 @@
   <script src="js/modules/org/arangodb/mimetypes.js"></script>
   <script src="js/modules/org/arangodb/simple-query-common.js"></script>
   <script src="js/modules/org/arangodb/simple-query.js"></script>
+  <script src="js/modules/org/arangodb/aql/functions.js"></script>
   <script src="js/modules/org/arangodb/graph/traversal.js"></script>
   <script src="js/modules/org/arangodb-common.js"></script>
   <script src="js/modules/org/arangodb.js"></script>
