@@ -15,6 +15,8 @@ v1.4
 v1.3.1 (2013-XX-XX)
 -------------------
 
+* issue #535: Problem with AQL user functions javascript API
+
 * set --javascript.app-path for test execution to prevent startup error
 
 * issue #532: Graph _edgesCache returns invalid data?
